dynamically generated navigation

--- a/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/src/app/app.component.html
@@ -3,28 +3,12 @@
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
-      <a href="#">
+      <button>
         <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
-      </a>
+      </button>
     </div>
-    <div class="menu-sidebar-content js-scrollbar1">
-      <nav class="navbar-sidebar">
-        <ul class="list-unstyled navbar-list">
-          <li>
-            <a href="#">Books</a>
-          </li>
-          <li>
-            <a href="#">Coffee Mugs</a>
-          </li>
-          <li>
-            <a href="#">Mouse Pads</a>
-          </li>
-          <li>
-            <a href="#">Luggage Tags</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <app-product-category-menu></app-product-category-menu>
+ 
   </aside>
   <!-- END MENU SIDEBAR-->
 
@@ -43,10 +27,10 @@
               </button>
             </form>
             <div class="cart-area d-n">
-              <a href="shopping-detail.html">
+              <button href="shopping-detail.html">
                 <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
                   aria-hidden="true"></i>
-              </a>
+              </button>
             </div>
           </div>
           <div class="account-wrap"></div>
@@ -56,7 +40,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-    <app-product-list></app-product-list>
+    <router-outlet></router-outlet>
     </div>
   </div>
 
