--- a/angular-ecommerce/src/styles.css
+++ b/angular-ecommerce/src/styles.css
@@ -84,11 +84,11 @@ h6{
 }
 
 a{
-    display:inline-block
+    text-decoration:none;
 }
 
 a:active,a:focus,a:hover{
-    text-decoration:none !important;
+    text-decoration:none;
     outline:0
 }
 
@@ -735,7 +735,7 @@ table.table.table-bordered th{
     background-color:#0da8e4!important;
     border-color:#0da8e4!important
 }
-a.primary-btn{
+button.primary-btn{
     background:#05143f;
     padding:7px 20px;
     text-align:center;
@@ -745,7 +745,7 @@ a.primary-btn{
     font-size:14px;
     margin-top:5px
 }
-a.primary-btn:hover{
+button.primary-btn:hover{
     background:#0da8e4;
     color:#fff
 }
