--- a/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -10,6 +10,10 @@
                         <button href="#" class="primary-btn">Add to Cart</button>
                     </div>
                 </div>
+
+                <div *ngIf="products?.length ==0" class="alert alert-warning col-md-12" role="alert">
+                    No Products Found
+                </div>
             </div>
         </div>
     </div>
