--- a/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/src/app/app.component.html
@@ -21,13 +21,8 @@
           <div class="header-wrap">
 
             <app-search></app-search>
+            <app-cart-status></app-cart-status>
             
-            <div class="cart-area d-n">
-              <button href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
-                  aria-hidden="true"></i>
-              </button>
-            </div>
           </div>
           <div class="account-wrap"></div>
         </div>
