--- a/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -13,7 +13,7 @@
                         </a>
 
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
-                        <button href="#" class="primary-btn">Add to Cart</button>
+                        <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
 
